--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     /* ───── 카드 보드 & 카드 ───── */
     .board{
       width:100%; height:100%;
-      display:grid; gap:12px;          /* 카드 간격 */
+      display:grid; gap:12px;          /* JS에서 라운드별로 덮어씀 */
     }
     .card{
       background:#fff;
@@ -132,9 +132,7 @@
       line-height:1;
       user-select:none;
     }
-    .shake{
-      animation: shake .2s ease;
-    }
+    .shake{ animation: shake .2s ease; }
     @keyframes shake {
       0%{ transform: translateX(0) }
       25%{ transform: translateX(-2px) }
@@ -199,16 +197,18 @@
     /* ─────────────────────  라운드 & 보드 로직 ───────────────────── */
     const roundEl = document.getElementById('round');
     const boardEl = document.getElementById('board');
-    const MAX_ROUND = 30;
+    const MAX_ROUND = 50;     // ★ 50라운드까지
     let round = 1;
 
     function gridSizeFor(round){
-      if (round <= 5) return 2;       // 1~5 : 2x2
-      if (round <= 10) return 3;      // 6~10 : 3x3
-      if (round <= 14) return 3;      // 빈 구간(11~14): 3x3 유지
-      if (round <= 20) return 4;      // 15~20 : 4x4
-      if (round <= 24) return 5;      // 21~24 : 5x5
-      return 6;                        // 25~30 : 6x6
+      if (round <= 5)  return 2;   // 1~5 : 2x2
+      if (round <= 10) return 3;   // 6~10 : 3x3
+      if (round <= 14) return 3;   // 11~14 : 3x3 유지
+      if (round <= 20) return 4;   // 15~20 : 4x4
+      if (round <= 24) return 5;   // 21~24 : 5x5
+      // 25 이상: 5 라운드마다 +1 → 6x6, 7x7, … (최대 10x10)
+      const step = Math.floor((round - 25) / 5);  // 25~29:0, 30~34:1, ...
+      return Math.min(10, 6 + Math.max(0, step));
     }
 
     // 라운드가 올라갈수록 색 차이를 줄여 난이도 상승
@@ -220,7 +220,6 @@
     }
 
     function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
-
     function makeHsl(h, s, l){ return `hsl(${h} ${s}% ${l}%)`; }
 
     function randomBaseColor(){
@@ -231,19 +230,23 @@
     }
 
     function renderRound(){
-      // UI 업데이트
       roundEl.textContent = `Round ${round}`;
       boardEl.innerHTML = '';
 
       const cols = gridSizeFor(round);
-      const count = cols*cols;
+      const count = cols * cols;
+
+      // 칸 수가 많아질수록 간격을 조금 줄여서 가독성 확보
+      const gapPx = (cols >= 9) ? 6 : (cols >= 7) ? 8 : 12;
+      boardEl.style.gap = gapPx + 'px';
       boardEl.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
 
-      // 폰트 크기: 셀 크기 기반으로 계산
-      const cellSize = boardEl.clientWidth / cols - 12; // gap 보정
-      const fontPx = Math.max(22, Math.floor(cellSize * 0.55));
+      // 폰트 크기: 보드 너비에서 gap을 제외한 셀 크기를 기준으로 계산
+      const boardW = boardEl.clientWidth;
+      const cellSize = (boardW - gapPx * (cols - 1)) / cols;
+      const fontPx = Math.max(18, Math.floor(cellSize * 0.55));
 
-      // 색상 구성
+      // 색상 구성 (정답 1개는 비슷하지만 다른 톤)
       const base = randomBaseColor();
       const delta = colorDeltaFor(round);
       const sign = Math.random() < 0.5 ? -1 : 1;
@@ -276,20 +279,17 @@
 
         card.addEventListener('click', () => {
           if(i === answerIndex){
-            // 정답 → 다음 라운드
             nextRound();
           }else{
-            // 오답 → 살짝 흔들림 피드백
             card.classList.remove('shake');
-            void card.offsetWidth; // reflow to restart animation
+            void card.offsetWidth; // reflow
             card.classList.add('shake');
           }
-        }, { once:false });
+        });
       }
 
       // 라운드 타이머(3초)
       startTimer(3, () => {
-        // 시간 초과 → 결과 페이지로
         window.location.href = `result.html?round=${round}&reason=timeout`;
       });
     }
@@ -297,7 +297,6 @@
     function nextRound(){
       round += 1;
       if(round > MAX_ROUND){
-        // 전 라운드 모두 성공
         window.location.href = `result.html?round=${MAX_ROUND}&reason=clear`;
         return;
       }
@@ -307,12 +306,8 @@
     // 최초 라운드 시작
     renderRound();
 
-    // 화면 리사이즈 시 폰트 재계산을 위해 재랜더(색은 새로 뽑히지 않게 현재 라운드 유지)
-    const ro = new ResizeObserver(() => {
-      // 현재 라운드를 다시 그림 (색상/정답이 바뀌는 것을 막으려면 캐시가 필요하지만,
-      // 초기 구현은 단순화를 위해 리사이즈가 잦지 않다는 가정 하에 유지)
-      renderRound();
-    });
+    // 화면 리사이즈 시 재배치(폰트/간격 재계산)
+    const ro = new ResizeObserver(() => renderRound());
     ro.observe(boardEl);
   </script>
 </body>
