--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <h1 class="title">집중력 향상 게임</h1>
 
     <!-- 2. 설명 -->
-    <p class="desc">집중해서 같은 모양의 그림끼리 선택해 보세요.</p>
+    <p class="desc">집중해서 다른 색상의 카드를 선택해 보세요.</p>
 
     <!-- 3. Round -->
     <div class="round" id="round">Round 1</div>
